[tool.poetry]
name = "Aware-API"
version = "0.1.0"
description = "Flask-API for Aware, the highly visual alerting dashboard"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
